--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@ layout: default
 
 <br>
 
-<h3 class="section-head">Featured Products</h3>
+<h3 class="section-head">Produtos</h3>
 <div class="row">
   {% for product in site.products | limit: 8 %}
     {% include product-grid-item.html product=product %}
   {% endfor %}
 </div>
 
-<h3 class="section-head">Featured Collections</h3>
+<h3 class="section-head">Coleções</h3>
 <div class="row">
   {% for i in (18..19) %}
     <div class="col-md-3 col-sm-4 col-xs-6">
@@ -33,7 +33,7 @@ layout: default
 </div>
 
 <div class="home_page_content hidden">
-  <h3>About Us</h3>
+  <h3>Sobre a Gente</h3>
   <p>A great About Us page helps builds trust between you and your customers. The more content you provide about you and your business, the more confident people will be when purchasing from your store.</p>
   <p>Your About Us page might include:</p>
   <ul>
